--- a/app/views/drivers/_form.html.haml
+++ b/app/views/drivers/_form.html.haml
@@ -28,7 +28,7 @@
             .col-md-10
               - if @readonly
                 %p.form-control
-                  = number_to_phone(@driver.phone_number, area_code: true)
+                  = format_phone_number(@driver.phone_number)
               - else
                 = f.text_field :phone_number, class: "form-control"
           .form-group
@@ -36,7 +36,7 @@
             .col-md-10
               - if @readonly
                 %p.form-control
-                  = number_to_phone(@driver.alt_phone_number, area_code: true)
+                  = format_phone_number(@driver.alt_phone_number)
               - else
                 = f.text_field :alt_phone_number, class: "form-control"
           - if @readonly
