--- a/app/views/runs/index.html.haml
+++ b/app/views/runs/index.html.haml
@@ -19,10 +19,24 @@
         = translate_helper("hide_calendar")
   = render 'trips/calendar', base_path: runs_path, resources: @day_resources, events: @runs_json
 
+  %br
+  .modify-selected-runs.dropdown{style: 'margin-bottom: 5px;'}
+    %button.btn.btn-primary.dropdown-toggle{type: 'button', data: {toggle: 'dropdown'}} 
+      =translate_helper(:modify_selected_runs)
+      %span.caret
+    %ul.dropdown-menu
+      -Run::BATCH_ACTIONS.each do |action|
+        %li
+          %a{href: '#', 'data-run-batch-action' => action.to_s }
+            =translate_helper("#{action}_run")
+
   = render :partial => 'list'
 
 :javascript
   $(function() {
+  
+    /* CALENDAR */
+  
     // hide/unhide calendar
     function manage_calendar_hidden_status() {
       var is_calendar_hidden = (localStorage.getItem('run_calendar_hidden') == 'true');
@@ -42,4 +56,50 @@
 
     manage_calendar_hidden_status();
     $('#hide_run_calendar').prop('checked', (localStorage.getItem('run_calendar_hidden') == 'true'));
+    
+    
+    /* MULTI-SELECT AND BATCH CANCEL */
+    
+    // One checkbox to rule them all
+    $('.master-select-checkbox').change(function() {
+      $('.run-selected').prop('checked', $(this).prop('checked'));
+    });
+    
+    var clearCheckboxes = function() {
+      $('.master-select-checkbox').prop('checked', false).trigger('change');
+    }
+    
+    // Handler for applying an action to multiple selected runs
+    $('.modify-selected-runs a').click(function() {
+      var checkedBoxes = $('.run-selected:checked');
+      if(checkedBoxes.length === 0) { return; } // Return if no runs are selected
+
+      // Pull the run ids from the selected rows
+      var runRows = checkedBoxes.closest('tr.run');
+      var runIds = runRows.map(function() {
+        return this.dataset.runId;
+      }).get().join();
+      
+      // Pull the action name from the dropdown
+      var action = $(this).data('run-batch-action');
+      
+      // PERFORM APPROPRIATE ACTION ON SELECTED RUNS
+      console.log("RUN ACTION", runIds, action);
+      
+      // Update the appropriate form based on the action
+      var form;
+      if (action === "cancel") {
+        form = $('form.cancel-multiple-runs');
+        form.find('#cancel_multiple_runs_run_ids').val(runIds);
+      } else if (action === "delete") {
+        form = $('form.delete-multiple-runs');
+        form.find('#delete_multiple_runs_run_ids').val(runIds);
+      }
+      
+      // SUBMIT THE FORM
+      form.submit();
+      
+      clearCheckboxes();
+      
+    });
   });
