Build interface for adding and deleting customer traveller trainings

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -24,6 +24,7 @@
   <%= hidden_field_tag 'addresses' %>
   <%= hidden_field_tag 'mailing_address_index' %>
   <%= hidden_field_tag 'donations' %>
+  <%= hidden_field_tag 'travel_trainings' %>
   <%= f.hidden_field :group, value: is_group %>
   <%= render 'form_header', edit_mode: edit_mode, f: f %>
   <% if @customer.errors.any? %>
@@ -39,6 +40,7 @@
 
   <div class="col-sm-12 col-md-6">
     <%= render 'details_panel', f: f, edit_mode: edit_mode %>
+    <%= render 'travel_trainings_panel', f:f, edit_mode: edit_mode %>
   </div>
 
   <div class="col-sm-12 col-md-6">
@@ -48,12 +50,12 @@
     <%= render 'donations_panel', f: f, edit_mode: edit_mode  %>
     <%= render 'others_panel', f: f, edit_mode: edit_mode %>
   </div>
-
 <% end %>
 
 <%= render 'inactivate_dialog' if edit_mode == :show %>
 <%= render 'add_donation_dialog' if edit_mode == :edit || edit_mode == :new %>
 <%= render 'add_address_dialog', edit_mode: edit_mode %>
+<%= render 'add_travel_training_dialog' if edit_mode == :edit || edit_mode == :new %>
 
 <%= render 'shared/hide_invisible_form_fields_js', model_name: "customer", table_name: 'customers', provider_id:  current_provider.try(:id) %>
 <script>
@@ -94,6 +96,7 @@
     $('#customerForm input[name=mailing_address_index]').val(mailingAddressIndex);
     $('#customerForm input[name=addresses]').val(JSON.stringify(addresses));
 
+
     // serializing donations
     var donations = [];
     $('#customerDonationsTable tbody tr').each(function() {
@@ -101,5 +104,14 @@
     });
 
     $('#customerForm input[name=donations]').val(JSON.stringify(donations));
+    
+    
+    // serializing travel trainings
+    var travelTrainings = [];
+    $('#customerTravelTrainingsTable tbody tr').each(function() {
+      travelTrainings.push($(this).data('travelTraining'));
+    });
+
+    $('#customerForm input[name=travel_trainings]').val(JSON.stringify(travelTrainings));
   });
 </script>
