--- a/app/views/runs/_list.html.haml
+++ b/app/views/runs/_list.html.haml
@@ -20,10 +20,10 @@
 = form_for :cancel_multiple_runs, url: cancel_multiple_runs_path, 
   method: :patch, 
   html: { class: 'cancel-multiple-runs' }  do |f|
-  = f.text_field :run_ids, label: false, value: nil
+  = f.text_field :run_ids, label: false, value: nil, style: 'display: none'
   
 -# Form for sending batch delete requests
 = form_for :delete_multiple_runs, url: delete_multiple_runs_path, 
   method: :delete, 
   html: { class: 'delete-multiple-runs' }  do |f|
-  = f.text_field :run_ids, label: false, value: nil
+  = f.text_field :run_ids, label: false, value: nil, style: 'display: none'
