Only allow picking current/past date as traning given date [RPII-65]

--- a/app/views/customers/_travel_trainings_panel.html.haml
+++ b/app/views/customers/_travel_trainings_panel.html.haml
@@ -39,6 +39,7 @@
 :javascript
   $(document).ready(function() {
     makeDatePickers();
+    $( ".new_travel_training .date-picker" ).datepicker( "option", "maxDate", "0" );
     $('#customerTravelTrainingsTable').on('click', '.deleteCustomerTravelTraining', function(e) {
       e.preventDefault();
 
