Driver Availability Validation

--- a/app/views/runs/_row.html.haml
+++ b/app/views/runs/_row.html.haml
@@ -1,4 +1,4 @@
-%tr{class: 'run' + (run.valid_as_daily_run? ? ' valid' : ' invalid'), data: { 'run-id' => run.id }}
+%tr{class: 'run', data: { 'run-id' => run.id }}
   %td
     %input.run-selected{type: "checkbox"}
   %td
