Initial commit to add funding authorization numbers to customer profile

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -25,6 +25,7 @@
   <%= hidden_field_tag 'mailing_address_index' %>
   <%= hidden_field_tag 'donations' %>
   <%= hidden_field_tag 'travel_trainings' %>
+  <%= hidden_field_tag 'funding_authorization_numbers' %>
   <%= f.hidden_field :group, value: is_group %>
   <%= render 'form_header', edit_mode: edit_mode, f: f %>
   <% if @customer.errors.any? %>
@@ -41,6 +42,7 @@
   <div class="col-sm-12 col-md-6">
     <%= render 'details_panel', f: f, edit_mode: edit_mode %>
     <%= render 'travel_trainings_panel', f:f, edit_mode: edit_mode %>
+    <%= render 'funding_authorization_numbers_panel', f:f, edit_mode: edit_mode %>
   </div>
 
   <div class="col-sm-12 col-md-6">
@@ -56,6 +58,7 @@
 <%= render 'add_donation_dialog' if edit_mode == :edit || edit_mode == :new %>
 <%= render 'add_address_dialog', edit_mode: edit_mode %>
 <%= render 'add_travel_training_dialog' if edit_mode == :edit || edit_mode == :new %>
+<%= render 'add_funding_authorization_number_dialog' if edit_mode == :edit || edit_mode == :new %>
 
 <%= render 'shared/hide_invisible_form_fields_js', model_name: "customer", table_name: 'customers', provider_id:  current_provider.try(:id) %>
 <script>
@@ -113,5 +116,13 @@
     });
 
     $('#customerForm input[name=travel_trainings]').val(JSON.stringify(travelTrainings));
+
+    // serializing funding numbers
+    var fundingNumbers = [];
+    $('#customerFundingAuthorizationNumbersTable tbody tr').each(function() {
+      fundingNumbers.push($(this).data('fundingNumber'));
+    });
+
+    $('#customerForm input[name=funding_authorization_numbers]').val(JSON.stringify(fundingNumbers));
   });
 </script>
