--- a/app/views/customers/_funding_authorization_numbers_panel.html.haml
+++ b/app/views/customers/_funding_authorization_numbers_panel.html.haml
@@ -29,7 +29,7 @@
             %td
               = funding_number.funding_source.try(:name)
             %td
-              = funding_number.contact_info
+              = simple_format funding_number.contact_info
     - if is_editing
       .pull-right
         = button_tag :type => 'button', 
@@ -54,19 +54,20 @@
       $('#customerFundingAuthorizationNumbersTable').append("<tr data-funding-number='" + escapeQuotes(JSON.stringify(fundingNumberData)) + "'>" +
           '<td><button class="deleteCustomerFundingAuthorizationNumber btn-danger" name="button" type="button">Delete</button></td>' +
           "<td>" + fundingNumberData.number + '</td>' +
-          "<td>" + fundingNumberData.funding_source + '</td>' +
-          "<td>" + fundingNumberData.contact_info + "</td>" +
+          "<td>" + fundingNumberData.funding_source_text + '</td>' +
+          "<td style='white-space: pre-wrap;'>" + fundingNumberData.contact_info + "</td>" +
           "</tr>");
     }
 
-    $('#addFundingAuthorizationNumbersDialog form').submit(function() {
+    $('#addFundingAuthorizationNumberDialog form').submit(function() {
       var fundingNumberData = {
-        date: $('#funding_authorization_number_name').val(),
-        date: $('#funding_authorization_number_funding_source').val(),
-        comment: $('#funding_authorization_number_contact_info').val()
+        number: $('#funding_authorization_number_number').val(),
+        funding_source_text: $('#funding_authorization_number_funding_source option:selected').text(),
+        funding_source_id: $('#funding_authorization_number_funding_source').val(),
+        contact_info: $('#funding_authorization_number_contact_info').val()
       };
       //insert new row
-      $('#addFundingAuthorizationNumbersDialog').modal('hide');
+      $('#addFundingAuthorizationNumberDialog').modal('hide');
       insertFundingNumberRow(fundingNumberData);
 
       return false; //no http submission
