--- a/app/views/trips/_eligibility_accommodation_panel.html.haml
+++ b/app/views/trips/_eligibility_accommodation_panel.html.haml
@@ -28,16 +28,16 @@
       - if @customer
         %h4.col-sm-12= translate_helper('customer_eligibilities')
         - yes_label = translate_helper('yes')
-        - no_label = translate_helper('no')
-        .form-group.col-sm-12
-          .col-sm-3
-            = translate_helper("age_eligible")
-          .col-sm-9
-            = @customer.age_eligible? ? yes_label : no_label
+        - if @customer.age_eligible?
+          .form-group.col-sm-12
+            .col-sm-3
+              = translate_helper("age_eligible")
+            .col-sm-9
+              = yes_label
 
-        - @customer.customer_eligibilities.specified.includes(:eligibility).references(:eligibility).each do |elig|
+        - @customer.customer_eligibilities.eligible.includes(:eligibility).references(:eligibility).each do |elig|
           .form-group.col-sm-12
             .col-sm-3
               = elig.eligibility.description
             .col-sm-9
-              = elig.eligible ? yes_label : no_label
+              = yes_label
