--- a/app/views/trips/_trip_result_filter.html.haml
+++ b/app/views/trips/_trip_result_filter.html.haml
@@ -1,6 +1,6 @@
 .col-sm-12.trip_result-filter{style: 'padding: 5px;'}
   = f.label :trip_result_id, translate_helper(:trip_result)
-  = f.collection_check_boxes :trip_result_id, [[TripResult::SHOW_ALL_ID, 'Show All']] + TripResult.by_provider(current_provider).order(:name).pluck(:id, :name) + [[TripResult::UNSCHEDULED_ID, 'Pending']], :first, :last, { checked: session[:trip_result_id] }, {class: 'trip-result-filter', style: 'vertical-align: initial;'} do |b|
+  = f.collection_check_boxes :trip_result_id, [[TripResult::SHOW_ALL_ID, 'Show All']] + TripResult.by_provider(current_provider).order(:name).pluck(:id, :name) + [[TripResult::UNSCHEDULED_ID, 'Pending']], :first, :last, { checked: session[trip_result_session_name] }, {class: 'trip-result-filter', style: 'vertical-align: initial;'} do |b|
     .col-sm-12
       = b.check_box + " " + b.text
 
