--- a/app/views/repeating_trips/_list.html.haml
+++ b/app/views/repeating_trips/_list.html.haml
@@ -7,6 +7,7 @@
       %th= translate_helper("pickup_time_column") 
       %th= translate_helper("dropoff_address_column")
       %th= translate_helper("appointment_time_column") 
+      %th= translate_helper("repeating_schedule") 
   %tbody
     - @trips.each do |trip|
       %tr
@@ -22,4 +23,6 @@
           = trip.dropoff_address.try :address_text
         %td
           = format_time_for_listing trip.appointment_time
+        %td
+          = trip.schedule.to_s rescue nil
     
