Make appointment_time optional for Trip [RPII-178]

--- a/app/views/repeating_trips/_list.html.haml
+++ b/app/views/repeating_trips/_list.html.haml
@@ -22,7 +22,7 @@
         %td
           = trip.dropoff_address.try :address_text
         %td
-          = format_time_for_listing trip.appointment_time
+          = format_time_for_listing trip.appointment_time if trip.appointment_time
         %td
           = trip.schedule.to_s rescue nil
     
