--- a/app/views/customers/_customer_trip_summary_table.html.haml
+++ b/app/views/customers/_customer_trip_summary_table.html.haml
@@ -21,4 +21,4 @@
           %td
             = trip.dropoff_address.try :address_text
           %td
-            = format_time_for_listing trip.appointment_time
+            = format_time_for_listing trip.appointment_time if trip.appointment_time
