--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -22,4 +22,4 @@
           %tr
             %td{:colspan => "5"}= translate_helper("drivers_empty")
         - else
-          = render partial: 'driver', collection: @drivers.includes(:user).references(:user).reorder("lower(users.last_name)", "lower(users.first_name)") 
+          = render partial: 'driver', collection: @drivers
