--- a/app/views/runs/_form.html.haml
+++ b/app/views/runs/_form.html.haml
@@ -47,6 +47,30 @@
       makeDatePickers();
     });
 
+- if !@is_repeating_run && edit_mode != :show
+  = render 'runs/unavailable_driver_warning_dialog'
+  :javascript
+    $(function() {
+      $('.run_form input[type=submit]').click(function() {
+        var driver_id = $('#run_driver_id').val();
+        var date = $('#run_date').val();
+        var start_time = $('#run_scheduled_start_time').val();
+        var end_time = $('#run_scheduled_end_time').val();
+        if(driver_id && date && start_time && end_time) {
+          var url = "#{check_time_range_availability_driver_path('xxx')}";
+          $.ajax({
+            url: url.replace('xxx', driver_id),
+            data: {
+              date: date,
+              start_time: start_time,
+              end_time: end_time
+            }
+          });
+          return false;
+        }
+      })
+    });
+
 - if @is_repeating_run
   = render 'shared/hide_invisible_form_fields_js', model_name: "repeatingrun", table_name: 'repeating_runs', provider_id:  current_provider.try(:id) 
 - else
