--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -7,6 +7,11 @@
       .pull-right
         = link_to translate_helper("new_driver_link_text"), new_driver_path, class: "btn action-button"
 .row
+  .col-sm-12.pull-right
+    .checkbox
+      %label
+        %input#show_active_only{type: 'checkbox'}
+          = translate_helper(:active_only)
   .col-sm-12.col-md-6
     %table#documents-table.table.table-striped.table-bordered
       %thead
@@ -23,3 +28,11 @@
             %td{:colspan => "5"}= translate_helper("drivers_empty")
         - else
           = render partial: 'driver', collection: @drivers
+
+:javascript
+  $(function() {
+    $('#show_active_only').prop('checked', #{params[:active_only] == 'true'});
+    $('#show_active_only').change(function() {
+      window.location.href = "#{drivers_path}?active_only=" + $(this).is(':checked')
+    });
+  });
