--- a/app/views/drivers/index.html.haml
+++ b/app/views/drivers/index.html.haml
@@ -11,7 +11,7 @@
     .checkbox
       %label
         %input#show_active_only{type: 'checkbox'}
-          = translate_helper(:active_only)
+          = translate_helper(:show_inactive)
   .col-sm-12.col-md-6
     %table#documents-table.table.table-striped.table-bordered
       %thead
@@ -31,8 +31,8 @@
 
 :javascript
   $(function() {
-    $('#show_active_only').prop('checked', #{params[:active_only] == 'true'});
+    $('#show_active_only').prop('checked', #{params[:show_inactive] == 'true'});
     $('#show_active_only').change(function() {
-      window.location.href = "#{drivers_path}?active_only=" + $(this).is(':checked')
+      window.location.href = "#{drivers_path}?show_inactive=" + $(this).is(':checked')
     });
   });
