Support inactivating a vehicle for a date range [RPII-201]

--- a/app/views/drivers/show.html.haml
+++ b/app/views/drivers/show.html.haml
@@ -13,3 +13,4 @@
           = @driver.inactivated? ? translate_helper(:activate) : translate_helper(:inactivate)
 
 = render partial: "form"
+= render 'shared/date_range_inactivate_dialog', resource: @driver, inactivation_url: inactivate_driver_path(@driver)
