--- a/app/views/shared/_date_range_inactivate_dialog.html.haml
+++ b/app/views/shared/_date_range_inactivate_dialog.html.haml
@@ -1,11 +1,11 @@
 #inactivateDialog.modal.fade.col-sm-12{:role => "dialog", "aria-hidden" => 'true', :tabindex => "-1"}
   .modal-dialog
     .modal-content
-      = form_for @driver, :url=>driver_inactivate_path(@driver), :html=>{:method=>:post} do |f|
+      = form_for resource, :url=>inactivation_url, :html=>{:method=>:post} do |f|
         .modal-header
           .pull-right
-            - if @driver.inactivated?
-              = button_tag translate_helper(:activate), id: 'activate_driver', type: :button, style: "margin-right: 5px;", class: "btn action-button btn-danger"
+            - if resource.inactivated?
+              = button_tag translate_helper(:activate), id: 'activate_resource', type: :button, style: "margin-right: 5px;", class: "btn action-button btn-danger"
             = button_tag translate_helper(:submit), type: :submit, style: "margin-right: 5px;", class: "btn action-button"
             = button_tag class: 'btn action-button', data: {dismiss: 'modal'} do
               = translate_helper(:cancel)
@@ -23,8 +23,8 @@
                 .col-sm-3
                   %span= translate_helper(:inactive)
                 .col-sm-9
-                  = f.hidden_field :active
-                  = check_box_tag :permanent_inactive, !@driver.active, !@driver.active
+                  = f.hidden_field :active, id: 'resource_active'
+                  = check_box_tag :permanent_inactive, !resource.active, !resource.active
               %label.col-sm-12
                 = translate_helper('date_range_inactive')
               .date_range
@@ -32,12 +32,12 @@
                   .col-sm-3
                     %span= translate_helper(:inactivated_start_date)
                   .col-sm-9
-                    = f.text_field :inactivated_start_date, class: 'date-picker form-control', readonly: true
+                    = f.text_field :inactivated_start_date, class: 'date-picker form-control', readonly: true, id: 'resource_inactivated_start_date'
                 .form-group.col-sm-12
                   .col-sm-3
                     %span= translate_helper(:inactivated_end_date)
                   .col-sm-9
-                    = f.text_field :inactivated_end_date, class: 'date-picker form-control', readonly: true
+                    = f.text_field :inactivated_end_date, class: 'date-picker form-control', readonly: true, id: 'resource_inactivated_end_date'
             .form-group.col-sm-12{style: 'padding-left: 0px;'}
               .col-sm-3
                 = f.label :active_status_changed_reason, translate_helper(:active_status_change_reason) 
@@ -56,7 +56,7 @@
 
     $('#permanent_inactive').change(function() {
       var is_checked = $(this).is(':checked');
-      $('#driver_active').val(!is_checked);
+      $('#resource_active').val(!is_checked);
 
       if(is_checked) {
         $('.date-picker').val('');
@@ -66,16 +66,16 @@
       }
     });
 
-    $('#activate_driver').click(function() {
+    $('#activate_resource').click(function() {
       $('#permanent_inactive').prop('checked', false);
-      $('#driver_active').val(true);
+      $('#resource_active').val(true);
       $('.date-picker').val('');
     });
 
     $('#inactivateDialog form').submit(function() {
       var is_inactive = $('#permanent_inactive').is(':checked');
-      var start_date = $( "#driver_inactivated_start_date" ).datepicker('getDate');
-      var end_date = $( "#driver_inactivated_end_date" ).datepicker('getDate');
+      var start_date = $( "#resource_inactivated_start_date" ).datepicker('getDate');
+      var end_date = $( "#resource_inactivated_end_date" ).datepicker('getDate');
       if(!is_inactive && end_date && start_date && end_date < start_date) {
         $('#inactivation_errors p').html("#{translate_helper(:inactivated_end_date_earlier_than_start_date)}");
         $('#inactivation_errors').show();
