--- a/app/views/vehicles/index.html.haml
+++ b/app/views/vehicles/index.html.haml
@@ -7,6 +7,11 @@
       .pull-right
         = link_to translate_helper("new_vehicle_link_text"), new_vehicle_path, class: "btn action-button"
 .row
+  .col-sm-12.pull-right
+    .checkbox
+      %label
+        %input#show_active_only{type: 'checkbox'}
+          = translate_helper(:show_inactive)
   .col-sm-12
     %table#vehicles-table.table.table-striped.table-bordered
       %thead
@@ -27,3 +32,11 @@
           %tr
             %td{:colspan => "12"}= translate_helper("no_vehicles")
         = render partial: 'vehicle', collection: @vehicles
+
+:javascript
+  $(function() {
+    $('#show_active_only').prop('checked', #{params[:show_inactive] == 'true'});
+    $('#show_active_only').change(function() {
+      window.location.href = "#{vehicles_path}?show_inactive=" + $(this).is(':checked')
+    });
+  });
